--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@
 /.pnp
 .pnp.js
 /.idea
-
 # testing
 /coverage
+
 
 # production
 /build
@@ -22,3 +22,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/package-lock.json
+/yarn.lock
